<resources>
    <string name="app_name">Password Checker</string>
    <string name="UsernameTextLabel">Username: </string>
    <string name="PasswordTextLabel">Password:</string>
    <string name="PasswordCorrectText">Enter Password</string>
    <string name="UsernameInput"></string>
    <string name="PasswordInputId"></string>
    <string name="PasswordInput" />
    <string name="SuccessViewLabel">Success</string>
    <string name="LogoutButton">Log Out</string>
    <string name="SubmitButton">Submit</string>
    <string name="LanguageViewLabel">Language:</string>
    <string name="EnglishRadioId">English</string>
    <string name="SpanishRadioSelect">Spanish</string>
    <string name="NameLabel">Name:</string>
    <string name="EmailAddressLabel">Email Address:</string>
    <string name="NameInput" />
    <string name="EmailAddressInput" />
    <string name="DateViewLabel">Presentation Date:</string>
    <string name="TimeViewLabel">Presentation Time:</string>
    <string name="Hint">calculate</string>
    <string name="ClassificationLabel">Please select one</string>
    <string name="TimeSelectButton">Time</string>
    <string name="SelectDateButton">Date</string>
    <string name="WelcomeLogo" />
    <string-array name="question_array_english">
        <item> Student</item>
        <item> Staff </item>
        <item> Faculty </item>
        <item> None </item>
    </string-array>
    <string-array name="question_array_spanish">
        <item> Estudiante</item>
        <item> Empleados </item>
        <item> Facultad </item>
        <item> Nada </item>
    </string-array>


    <string name="lang_pref_english">Language preference? </string>
    <string name="lang_pref_spanish">Preferencia de idioma</string>
    <string name="question_english">Member of Sac City?</string>
    <string name="question_spanish">Member de Sac City?</string>
    <string name="state_prompt_english">Enter your state: </string>
    <string name="state_prompt_spanish">Ingresa tu estado: </string>
    <string name="city_prompt_english">Enter your city: </string>
    <string name="city_prompt_spanish">Ingresa tu ciudad: </string>
    <string name="ReturnDateButton">Select Date</string>
    <string name="ReturnTimeButton">Select Time</string>
    <string name="SubmitButton2">Submit</string>
    <string name="ProfileName">Joe Zyirek</string>
    <string name="Project">Current Project</string>
    <string name="TicTacToeButton">Tic Tac Toe</string>
    <string name="Description">I work as a Software Analysis for the State of California. I have also graduated from DeVry Univeristy with a Bachelors of Science in Game and Simulation Programming. For this class I created a Tic Tac Toe game in which players may go head to head with other players.</string>
    <string name="NextButton">Next</string>
</resources>
