<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.admin.passwordchecker.PasswordCheckerActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@drawable/stars">

    <TextView
        android:id="@+id/UsernameTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:text="Username:"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintRight_toLeftOf="@+id/UsernameInputId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasswordTextLabel"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginStart="27dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/PasswordInputId"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/UsernameInputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/PasswordInputId"
        app:layout_constraintBaseline_toBaselineOf="@+id/UsernameTextId"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/PasswordInputId" />

    <EditText
        android:id="@+id/PasswordInputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Hint"
        android:inputType="textPersonName|textPassword"
        android:text="@string/PasswordInput"
        android:textColor="@android:color/holo_blue_bright"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/UsernameInputId" />

    <Button
        android:id="@+id/SubmitButtonId"
        android:layout_width="181dp"
        android:layout_height="99dp"
        android:layout_marginBottom="69dp"
        android:text="@string/SubmitButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
