<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context="com.admin.passwordchecker.LoginSuccess"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/LanguageViewId"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/LanguageViewLabel"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/languageSelectors"
        android:layout_marginEnd="2dp"
        app:layout_constraintRight_toRightOf="@+id/NameLabelId"
        android:layout_marginTop="42dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="45dp"
        app:layout_constraintLeft_toLeftOf="@+id/languageSelectors"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ClassificationLabelId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/ClassificationLabel"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/NameLabelId"
        app:layout_constraintLeft_toLeftOf="@+id/NameLabelId"
        app:layout_constraintRight_toLeftOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/languageSelectors"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <Spinner
        android:id="@+id/PersonClassificationId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:entries="@array/question_array_english"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/NameInputId"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/languageSelectors"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toRightOf="@+id/ClassificationLabelId" />

    <TextView
        android:id="@+id/NameLabelId"
        android:layout_width="75dp"
        android:layout_height="24dp"
        android:text="@string/NameLabel"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="158dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NameInputId"
        android:layout_width="256dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/NameInput"
        android:textColor="?attr/colorPrimaryDark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/EmailAddressLabelId"
        android:layout_marginEnd="6dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ClassificationLabelId"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteY="170dp"
        android:layout_marginRight="6dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/EmailAddressLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmailAddressLabel"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/NameLabelId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/EmailAddressInputId"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/EmailAddressInput"
        android:textColor="@color/colorPrimaryDark"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddressLabelId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/TimeSelectButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeSelectButton"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp" />

    <Button
        android:id="@+id/SelectDateButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectDateButton"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="52dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/TimeSelectButtonId" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="257dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="time"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/EmailAddressInputId"
        android:layout_marginTop="97dp"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddressLabelId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="99dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        tools:layout_editor_absoluteY="360dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="date"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/SelectDateButtonId"
        app:layout_constraintHorizontal_bias="0.384"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddressLabelId"
        app:layout_constraintVertical_bias="0.819" />

    <TextView
        android:id="@+id/WelcomeLogoId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/WelcomeLogo"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/LanguageViewId"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="4dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/languageSelectors"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/NameLabelId"
        android:layout_marginEnd="35dp"
        app:layout_constraintRight_toRightOf="@+id/PersonClassificationId"
        android:layout_marginTop="67dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/EnglishRadioSelectId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.01"
            android:text="English" />

        <RadioButton
            android:id="@+id/SpanishRadioSelectId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Spanish" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
