<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_background"
    tools:context="com.admin.passwordchecker.ProfileActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/self"
        app:layout_constraintRight_toLeftOf="@+id/ProfileNameId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/TicTacToeLinkButtonId"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ProfileNameId"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:text="@string/ProfileName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ProjectId"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:text="@string/Project"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/TicTacToeLinkButtonId"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/ProfileNameId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView" />

    <RatingBar
        android:id="@+id/RatingBarId"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:visibility="visible"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="48dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/TicTacToeLinkButtonId"
        android:layout_width="136dp"
        android:layout_height="77dp"
        android:background="@drawable/tictactoe"
        android:text="@string/TicTacToeButton"
        android:textSize="30sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="17dp"
        android:layout_marginTop="154dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageView" />

    <TextView
        android:id="@+id/DescriptionId"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:text="@string/Description"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="12dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="93dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="94dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TicTacToeLinkButtonId" />
</android.support.constraint.ConstraintLayout>
